crates/ir/tests/ir/snapshots/main__ir__lower__data_types__generic_function.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__generic_function

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn map_option(v0: Option[w11], v1: (w11) -> x11) -> Option[x11] =
  switch v0 {
    0 (v2: w11) ->
      let v3: x11 = call_closure v1(v2)
      let v4: Option[x11] = construct Option::Some#0(v3)
      v4
    1 ->
      let v5: Option[x11] = construct Option::None#1()
      v5
  }
