crates/ir/tests/ir/snapshots/main__ir__lower__data_types__list_recursive_codegen.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__list_recursive_codegen

type List[x10] = Cons#0(x10, List[x10]) | Nil#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn second(v0: List[Int]) -> Int =
  switch v0 {
    0 (v1: Int, v2: List[x10]) ->
      switch v2 {
        0 (v3: Int, v4: List[x10]) ->
          v3
        _ ->
          0
      }
    _ ->
      0
  }

fn main() -> Unit =
  let v6: List[Int] = construct List::Nil#1()
  let v7: List[Int] = construct List::Cons#0(20, v6)
  let v8: List[Int] = construct List::Cons#0(10, v7)
  let v9: Int = call second(v8)
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v5, v9)
  v10
