crates/ir/tests/ir/snapshots/main__ir__lower__data_types__match_guard_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__match_guard_basic

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn classify(v0: Option[Int]) -> String =
  switch v0 {
    0 (v1: Int) ->
      let_join v5(v4: Bool) =
        if v4 {
          "positive"
        } else {
          "non-positive"
        }
      in
      let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v3: Bool = trait_call core/ord.Ord.lt(v2, 0, v1)
      jump v5(v3)
    1 ->
      "none"
  }

fn main() -> Unit =
  let v6: Option[Int] = construct Option::Some#0(5)
  let v7: String = call classify(v6)
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v8, v7)
  let v10: Option[Int] = construct Option::Some#0(0)
  let v11: String = call classify(v10)
  let v12: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v13: Unit = call println(v12, v11)
  let v15: Option[Int] = construct Option::None#1()
  let v16: String = call classify(v15)
  let v14: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v17: Unit = call println(v14, v16)
  v17
