crates/ir/tests/ir/snapshots/main__ir__lower__data_types__match_guard_binding.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__match_guard_binding

type Pair = Pair#0(Int, Int)
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn first_if_greater(v0: Pair) -> Int =
  switch v0 {
    0 (v1: Int, v2: Int) ->
      let_join v6(v5: Bool) =
        if v5 {
          v1
        } else {
          0
        }
      in
      let v3: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v4: Bool = trait_call core/ord.Ord.lt(v3, v2, v1)
      jump v6(v4)
    _ ->
      0
  }

fn main() -> Unit =
  let v7: Pair = construct Pair::Pair#0(3, 1)
  let v8: Int = call first_if_greater(v7)
  let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v9, v8)
  let v11: Pair = construct Pair::Pair#0(1, 3)
  let v12: Int = call first_if_greater(v11)
  let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v14: Unit = call println(v13, v12)
  let v16: Pair = construct Pair::Pair#0(2, 2)
  let v17: Int = call first_if_greater(v16)
  let v15: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v18: Unit = call println(v15, v17)
  v18
