crates/ir/tests/ir/snapshots/main__ir__lower__data_types__match_guard_or_pattern.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__match_guard_or_pattern

type Wrapper[x10] = Some#0(x10) | Wrap#1(x10)
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn extract(v0: Wrapper[Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      let_join v5(v4: Bool) =
        if v4 {
          v1
        } else {
          0
        }
      in
      let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v3: Bool = trait_call core/ord.Ord.lt(v2, 0, v1)
      jump v5(v3)
    1 (v6: Int) ->
      let_join v10(v9: Bool) =
        if v9 {
          v6
        } else {
          0
        }
      in
      let v7: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v8: Bool = trait_call core/ord.Ord.lt(v7, 0, v6)
      jump v10(v8)
    _ ->
      0
  }

fn main() -> Unit =
  let v11: Wrapper[Int] = construct Wrapper::Some#0(3)
  let v12: Int = call extract(v11)
  let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v14: Unit = call println(v13, v12)
  let v15: Wrapper[Int] = construct Wrapper::Wrap#1(5)
  let v16: Int = call extract(v15)
  let v17: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v18: Unit = call println(v17, v16)
  let v20: Wrapper[Int] = construct Wrapper::Some#0(0)
  let v21: Int = call extract(v20)
  let v19: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v22: Unit = call println(v19, v21)
  v22
