crates/ir/tests/ir/snapshots/main__ir__lower__data_types__match_ir_patterns.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__match_ir_patterns

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn simple_match(v0: Option[Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 ->
      0
  }

fn nested_match(v2: Option[Option[Int]]) -> Int =
  switch v2 {
    0 (v3: x10) ->
      switch v3 {
        0 (v4: Int) ->
          v4
        1 ->
          let v5: Int = neg_int(1)
          v5
      }
    1 ->
      0
  }

fn wildcard_match(v6: Option[Int]) -> Int =
  switch v6 {
    0 (v7: Int) ->
      v7
    _ ->
      42
  }

fn literal_match(v8: Int) -> Int =
  let v10: Bool = eq_int(v8, 0)
  if v10 {
    100
  } else {
    let v9: Bool = eq_int(v8, 1)
    if v9 {
      200
    } else {
      300
    }
  }

fn let_tuple() -> Int =
  let v11: (Int, Int) = tuple(1, 2)
  let v12: Int = tuple_project v11.0
  let v13: Int = tuple_project v11.1
  let v14: Int = add_int(v12, v13)
  v14

fn match_as_value(v15: Option[Int]) -> Int =
  let_join v19(v16: Int) =
    let v18: Int = add_int(v16, 1)
    v18
  in
  switch v15 {
    0 (v17: Int) ->
      jump v19(v17)
    1 ->
      jump v19(0)
  }
